examples/negative/silent_contract/impl_method_arity_mismatch.kai
# Silent contract (#520 audit, category 4 / protocols): the
# `impl P for Box`'s `foo` has arity 1, but `protocol P`
# declares `foo(x: Self, n: Int) : Int` (arity 2). The
# resolver should reject the impl as having the wrong shape.
# kaikai accepts and lets a call-site that passes the second
# argument compile, dropping the argument silently.
#
# See examples/negative/silent_contract/README.md for follow-up.

protocol P {
  foo(x: Self, n: Int) : Int
}

type Box = Box(Int)

impl P for Box {
  fn foo(b: Box) : Int = 1
}

fn main() : Int = foo(Box(1), 42)
